<resources>
    <string name="app_name">DatingUCC</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="register">register</string>
    <string name="already_have_an_account_sign_in_here">Already have an account sign in here</string>
    <string name="select_photo">SELECT PHOTO</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login">Login</string>
    <string name="have_not_registered_go_here">Have not registered? Go here</string>
    <string name="forgotton_password">Forgotten Password?</string>
    <string name="enter_email">Enter Email</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="password2">Password</string>
    <string name="please_enter_bio">Please Enter Bio</string>
    <string name="name">Name:</string>
    <string name="enter_name">Enter Name</string>
    <string name="please_enter_age">Please enter age</string>
    <string name="age">Age:</string>
    <string name="bio">Bio:</string>
    <string name="please_enter_course">Please enter course</string>
    <string name="course">Course:</string>
    <string name="location">Location:</string>
    <string name="enter_where_your_from">Enter where your from</string>
    <string name="finish_register">Finish Register</string>
    <string name="image_description">User Photo</string>
</resources>
