<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity2">

    <EditText
        android:id="@+id/register_locationtext"
        android:layout_width="90dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/location"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/register_coursetext"
        app:layout_constraintStart_toStartOf="@+id/register_coursetext"
        app:layout_constraintTop_toTopOf="@+id/register_location" />

    <EditText
        android:id="@+id/register_coursetext"
        android:layout_width="90dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/course"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/register_agetext"
        app:layout_constraintStart_toStartOf="@+id/register_agetext"
        app:layout_constraintTop_toTopOf="@+id/register_course" />

    <EditText
        android:id="@+id/register_location"
        android:layout_width="257dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_where_your_from"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/register_locationtext"
        app:layout_constraintTop_toBottomOf="@+id/register_course" />

    <EditText
        android:id="@+id/register_course"
        android:layout_width="257dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/please_enter_course"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/register_age"
        app:layout_constraintTop_toBottomOf="@+id/register_age" />

    <EditText
        android:id="@+id/register_age"
        android:layout_width="257dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/please_enter_age"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/register_agetext"
        app:layout_constraintTop_toBottomOf="@+id/register_bio" />

    <EditText
        android:id="@+id/register_agetext"
        android:layout_width="90dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/age"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/register_biotext"
        app:layout_constraintStart_toStartOf="@+id/register_biotext"
        app:layout_constraintTop_toTopOf="@+id/register_age" />

    <EditText
        android:id="@+id/register_biotext"
        android:layout_width="90dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/bio"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/register_nametext"
        app:layout_constraintStart_toStartOf="@+id/register_nametext"
        app:layout_constraintTop_toTopOf="@+id/register_bio" />

    <EditText
        android:id="@+id/register_name2"
        android:layout_width="257dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_photobutton" />

    <Button
        android:id="@+id/register_photobutton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_select_photo_button"
        android:text="@string/select_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_nametext"
        android:layout_width="90dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/register_name2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register_name2" />

    <EditText
        android:id="@+id/register_bio"
        android:layout_width="257dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/please_enter_bio"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_name2" />

    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/finish_register"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_locationtext" />

</androidx.constraintlayout.widget.ConstraintLayout>

